Update email address

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ header-img: assets/img/hero.jpg
     <p>From March to November 2017, I interned at <em>Microsoft Research Asia</em> in the VC Group, under the mentorship of researcher <a href="http://jlyang.org/">Jiaolong Yang</a>. Subsequently, I was a research intern at the <em>Inception Institute of Artificial Intelligence (IIAI)</em> between July 2019 and April 2020, advised by Prof. <a href="https://www.researchgate.net/profile/Jianbing_Shen">Jianbing Shen</a>, the laboratory's lead scientist. Currently, I am a visiting student at <em>ETH Zürich</em> in the Computer Vision Lab, supervised by <a href="https://ee.ethz.ch/the-department/faculty/professors/person-detail.OTAyMzM=.TGlzdC80MTEsMTA1ODA0MjU5.html">Luc Van Gool</a> and Prof. <a href="https://sites.google.com/view/wenguanwang/">Wenguan Wang</a>.
     </p>
     <p>My research interests are primarily in the areas of Embodied AI and Vision+X.</p>
-    <p><br><a href="mailto:hanqingwang@bit.edu.cn">[Email]</a><a href="/assets/resume.pdf">[CV]</a></p>
+    <p><br><a href="mailto:hanqingwang.c@gmail.com">[Email]</a><a href="/assets/resume.pdf">[CV]</a></p>
     </div>
     <br>
     <br>
