--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ header-img: assets/img/hero.jpg
     
         </aside>
     <h2>Recent News</h2><br>
-    <p><b>Thrilled to release <a href="https://github.com/OpenRobotLab/GRUtopia">GRUtopia</a> (a.k.a 桃源) - an Embodied AI platform for general purpose embodied AI research.</b></p>
+    <p><b>Thrilled to release <a href="https://github.com/OpenRobotLab/GRUtopia">GRUtopia</a> (a.k.a. 桃源) - an Embodied AI platform for general purpose embodied AI research.</b></p>
     <p>One paper has been accepted at CVPR 2023.</p>
     <p>One paper has been accepted by IJCV.</p>
     <p>One paper has been accepted at NeurIPS 2022 <b><font color="red">(Spotlight)</font></b>.</p>
